syntax = "proto3";

package pb;

option go_package = "github.com/PlatosCodes/desserted/backend/pb";

message PlayerGame {
    int64 player_game_id = 1;
    int64 player_id = 2;
    int64 game_id = 3;
    int32 player_number = 5;
    int32 player_score = 6;
    string player_status = 7;
    int32 number_of_players = 8;
    int64 created_by = 9;
    string status = 10;
}