syntax = "proto3";

package pb;

option go_package = "github.com/PlatosCodes/desserted/backend/pb";

message PlayerHand {
    int64 player_hand_id = 1;
    int64 player_game_id = 2;
    int64 card_id = 3;
    string name = 4;
}