syntax = "proto3";

package pb;

import "player_hand.proto";

option go_package = "github.com/PlatosCodes/desserted/backend/pb";

message GetPlayerHandRequest {
    int64 player_game_id = 1;
  }
  
  message GetPlayerHandResponse {
    repeated PlayerHand player_hand = 1;
  }

  